--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
         <!-- Bio text -->
         <p>
-          I studied Computer Science (and some neuroscience) @ Cal.
-	  In my free time, I enjoy coffee, competitive gaming, and fiddling with hardware (keyboards, cameras, PCs).
-          My current professional interests include open-source software, distributed systems, and MBMI futurism.
+	  I'm a first-year graduate student studying Engineering Management.
+	  Prior, I studied Computer Science at the University of California, Berkeley, where my love for coffee, augmented + virtual reality, and robotics formed.
+          Professionally, I currently work on Kubernetes, distributed systems, and functions as a service. On the side, I love studying Japanese and gardening.
           I also have a slowly growing <a href="https://www.youtube.com/c/BryanTongC">YouTube channel</a> with a few videos!
           <br />
         </p>
