--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,12 @@
         <h4>
           <div class="text"></div>
         </h4>
-        <!-- Subheader text -->
+        <!-- BLOG POST ENTRIES -->
+	<p>
+            <a href="blog/ssh-keys-for-verified-github.html">GitHub Verified via SSH Keys</a>
+            <br />
+            ↳ &#128197; 8/25/2022 &#9997; guide, software, programming</a>
+        </p>
 	<p>
             <a href="blog/actually-sustainable-food.html">Actually Sustainable Food</a>
             <br />
@@ -53,7 +58,7 @@
         <p>
             <a href="blog/netflixs-chaos-monkey.html">Netflix's Chaos Monkey</a>
             <br />
-            ↳ &#128197; 2/10/2021 &#9997; tech, software, distributed systems</a>
+            ↳ &#128197; 2/10/2021 &#9997; thoughts, software, distributed systems</a>
         </p>
 
         <!-- Buttons! Yay buttons! -->
