--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
 
         <!-- Bio text -->
         <p>
-	  I'm a first-year graduate student studying Engineering Management.
+	  I'm currently a first-year graduate student studying Engineering Management.
+	  <br />
 	  Prior, I studied Computer Science at the University of California, Berkeley, where my love for coffee, augmented + virtual reality, and robotics formed.
+	  <br />
           Professionally, I currently work on Kubernetes, distributed systems, and functions as a service. On the side, I love studying Japanese and gardening.
+	  <br />
           I also have a slowly growing <a href="https://www.youtube.com/c/BryanTongC">YouTube channel</a> with a few videos!
           <br />
         </p>
