Add fonts to try
Signed-off-by: Bryan Tong <tongb@vmware.com>

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <!-- Fonts -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fahkwang:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- CSS  -->
@@ -141,9 +144,9 @@
   }
 
   const phrases = [
-    '{btong.me}',
-    'homepage of',
     'Bryan Tong',
+    'personal website',
+    '{btong.me}',
     'software engineer',
   ]
 
