--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 20%">
         <h4>
-          <div class="text"></div>
+          <div class="text scrambles"></div>
         </h4>
 
         <!-- Subheader text -->
