--- a/projects.html
+++ b/projects.html
@@ -10,9 +10,9 @@
   <meta property="og:type" content="website" />
 	<meta property="og:title" content="Bryan Tong" />
 	<meta property="og:description" content="Homepage of Bryan Tong, Software Engineer." />
-	<meta property="og:image" content="http://btong.me/images/favicon.png" />
+	<meta property="og:image" content="https://btong.me/images/favicon.png" />
 	<link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
-	<link rel="shortcut icon" href="http://btong.me/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="https://btong.me/favicon.png" type="image/x-icon">
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Fonts -->
@@ -58,7 +58,7 @@
         <p>
             // 2018 - 2019
             <br />
-            <a href="http://rll.berkeley.edu/blue/" onmouseover="hoverTool()" id="blue">Robotic Arm Tele-Operation with Blue</a> // <span>Robotics, HCI</span>
+            <a href="https://rll.berkeley.edu/blue/" onmouseover="hoverTool()" id="blue">Robotic Arm Tele-Operation with Blue</a> // <span>Robotics, HCI</span>
             <br />
             ↳ <a href="/projects/blue-vive.mp4">Video Demonstration</a>, <a href="https://spectrum.ieee.org/automaton/robotics/industrial-robots/uc-berkeley-blue-low-cost-force-controlled-robot-arm">News Article (IEEE)</a>
 
