--- a/projects/boredomsolver.html
+++ b/projects/boredomsolver.html
@@ -10,9 +10,9 @@
   <meta property="og:type" content="website" />
 	<meta property="og:title" content="Bryan Tong" />
 	<meta property="og:description" content="Homepage of Bryan Tong, Software Engineer." />
-	<meta property="og:image" content="http://btong.me/images/favicon.png" />
+	<meta property="og:image" content="https://btong.me/images/favicon.png" />
 	<link rel="shortcut icon" href="..//images/favicon.png" type="image/png" />
-	<link rel="shortcut icon" href="http://btong.me/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="https://btong.me/favicon.png" type="image/x-icon">
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Fonts -->
