feat: new index
Signed-off-by: Bryan Tong <tongb@vmware.com>

--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
         <!-- Subheader text -->
         <p>
           Software Engineer @ <span class="unicorn">Big Tech</span>
+          <br />
+          <a href="https://github.com/bbtong" target="_blank">GitHub</a> | <a href="https://linkedin.com/in/itsbryan" target="_blank">LinkedIn</a>
         </p>
         <p>
-          Ex-<span class="vmw">Anduril</span>, Ex-<span class="pivotal">Pivotal</span>
-          <br />
-          Former Co-Instructor of <a href="https://inst.eecs.berkeley.edu/~cs370"><strong><font color="navyblue">CS</font></strong><font color="orange">370</font></a>, 
-          Former President of <a href="https://vr.berkeley.edu/"><font color="lightskyblue">VR@B</font></a>
+          Formerly <span class="vmw">Anduril</span>, <span class="pivotal">Pivotal</span>, <a href="https://inst.eecs.berkeley.edu/~cs370"><strong><font color="navyblue">CS</font></strong><font color="orange">370</font></a>, <a href="https://vr.berkeley.edu/"><font color="lightskyblue">VR@B</font></a>
         </p>
 
         <!-- Bio text -->
