feat: misc changes
Signed-off-by: Bryan Tong <tongb@vmware.com>

--- a/projects/boredomsolver.html
+++ b/projects/boredomsolver.html
@@ -3,7 +3,7 @@
 <head>
   <!-- Basic Page Needs -->
   <meta charset="utf-8">
-  <title>Bryan Tong {bt}</title>
+  <title>Bryan Tong | btong.me</title>
   <meta name="description" content="Homepage of Bryan Tong, Software Engineer.">
   <meta name="author" content="Bryan Tong">
   <meta name="keywords" content="Bryan Tong" />
@@ -22,7 +22,6 @@
   <!-- CSS  -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/slider.css">
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="../images/favicon.png">
   <!-- Google stuff -->
