--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <!-- Basic Page Needs -->
   <meta charset="utf-8">
-  <title>Bryan Tong {bt}</title>
+  <title>Bryan Tong | btong.me</title>
   <meta name="description" content="btong.me - Homepage of Bryan Tong, software engineer and futurism enthusiast.">
   <meta name="author" content="Bryan Tong">
   <meta name="keywords" content="Bryan Tong" />
@@ -24,7 +24,6 @@
   <!-- CSS  -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/slider.css">
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/favicon.png">
   <!-- Google stuff -->
