Add Knative curl blog post

--- a/blog.html
+++ b/blog.html
@@ -46,10 +46,15 @@
           <div class="text"></div>
         </h1>
         <!-- BLOG POST ENTRIES -->
+        <p>
+          <a href="blog/knative-curling-broker-directly.html">Knative — Curling the Knative Broker Directly</a>
+          <br />
+          ↳ &#128197; 8/25/2022 &#9997; guide, software, programming, knative</a>
+      </p>
 	      <p>
             <a href="blog/ssh-keys-for-verified-github.html">Verifying GitHub Commits via SSH Keys</a>
             <br />
-            ↳ &#128197; 8/25/2022 &#9997; guide, software, programming</a>
+            ↳ &#128197; 8/25/2022 &#9997; guide, software, programming, git</a>
         </p>
 	      <p>
             <a href="blog/actually-sustainable-food.html">Actually Sustainable Food</a>
