--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <div class="body-container">
           <!-- Subheader text -->
           <p>
-            Software Engineer @ <span class="unicorn">Big Tech</span>. Formerly at <span class="vmw">Anduril</span>, <span class="pivotal">Pivotal</span>. Taught <a href="https://inst.eecs.berkeley.edu/~cs370"><strong><font color="navyblue">CS</font></strong><font color="orange">370</font></a>, ran <a href="https://vr.berkeley.edu/"><font color="lightskyblue">VR@B</font></a>.
+            Software Engineer @ <span class="unicorn">Big Tech</span>.
+            <br />
+            Formerly at <span class="vmw">Anduril</span>, <span class="pivotal">Pivotal</span>. Taught <a href="https://inst.eecs.berkeley.edu/~cs370"><strong><font color="navyblue">CS</font></strong><font color="orange">370</font></a>, ran <a href="https://vr.berkeley.edu/"><font color="lightskyblue">VR@B</font></a>.
           </p>
 
           <!-- Bio text -->
