--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="body-container">
           <!-- Subheader text -->
           <p>
-            Software Engineer @ <span class="vmware">Big Tech</span>.
+            Software, R&D @ <span class="vmware">VMware</span>.
             <br />
             Formerly at <span class="anduril">Anduril</span>, <span class="pivotal">Pivotal</span>. Taught <a href="https://inst.eecs.berkeley.edu/~cs370"><strong><font color="navyblue">CS</font></strong><font color="orange">370</font></a>, ran <a href="https://vr.berkeley.edu/"><font color="lightskyblue">VR@B</font></a>.
           </p>
