--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bryan Tong | btong.me</title>
-    <meta name="description" content="btong.me - Homepage of Bryan Tong, software engineer and futurism enthusiast.">
-    <meta name="author" content="Bryan Tong">
-    <meta name="keywords" content="Bryan Tong" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bryan Tong - Software Engineer</title>
+    <meta name="description" content="Homepage of Bryan Tong, software engineer and coffee enthusiast."/>
+    <meta name="author" content="Bryan Tong"/>
+    <meta name="keywords" content="Bryan Tong"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Bryan Tong" />
-    <meta property="og:description" content="btong.me - Homepage of Bryan Tong, software engineer and futurism enthusiast." />
+    <meta property="og:description" content="Homepage of Bryan Tong, software engineer and coffee enthusiast."/>
     <meta property="og:image" content="https://btong.me/images/favicon.png" />
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" />
+    <link rel="shortcut icon" href="assets/images/favicon.png"/>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73463502-1"></script>
@@ -51,17 +51,17 @@
           <!-- Subheader text -->
           <h4>About</h4>
             <p>
-              I'm currently a graduate student at JHU studying Engineering Management. I grew up in the SF Bay Area and did my undergraduate in Computer Science at UC Berkeley, where my love for coffee, augmented + virtual reality, and robotics formed.
+              I grew up in the SF Bay Area and did my undergraduate in Computer Science at UC Berkeley, where my love for coffee, augmented + virtual reality, and robotics formed.
             </p>
             <p>
-              Professionally, I currently work on Kubernetes, distributed systems, and functions as a service. On the side, I love studying Japanese and gardening.
+              Professionally, I currently work on all things involving distributed systems. On the side, I love studying Japanese and gardening.
               I also have a slowly growing <a href="https://www.youtube.com/c/BryanTongC">YouTube channel</a> with a few videos!
             </p>
           <h4>Experience</h4>
           <p>
-            Software Engineer, R&D @ <span class="vmware">VMware</span>.
+            Currently doing Infra stuff now.
             <br />
-            Formerly at <span class="anduril">Anduril</span>, <span class="pivotal">Pivotal</span>, and Bell Labs. Taught <a href="https://inst.eecs.berkeley.edu/~cs370"><strong><font color="navyblue">CS</font></strong><font color="orange">370</font></a>, ran <a href="https://vr.berkeley.edu/"><font color="lightskyblue">VR@B</font></a>.
+            Formerly R&D stuff @ <span class="vmware">VMware</span>, <span class="anduril">Anduril</span>, <span class="pivotal">Pivotal</span>, and Bell Labs. Taught <a href="https://inst.eecs.berkeley.edu/~cs370"><strong><font color="navyblue">CS</font></strong><font color="orange">370</font></a>, ran <a href="https://vr.berkeley.edu/"><font color="lightskyblue">VR@B</font></a>.
           </p>
 
           <!-- Bio text -->
