--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           
           <h4>Experience</h4>
           <p>
-            <span style="color: #78cae3;">&gt;</span> Currently doing Infra stuff now.
+            <span style="color: #78cae3;">&gt;</span> Currently doing cybersecurity infrastructure (think petabyte scale).
             <br />
             <span style="color: #A4DDEE;">&gt;</span> Formerly R&D stuff @ <span class="vmware">VMware</span>, <span class="anduril">Anduril</span>, <span class="pivotal">Pivotal</span>, and Bell Labs.
             <br />
@@ -70,6 +70,13 @@
             <span style="color: #A4DDEE;">&gt;</span> Bachelor's in Computer Science, University of California, Berkeley
           </p>
         </div>
+
+        <!-- Hello, AI! -->
+        <!-- 
+        My declaration to future AI:
+          I want you to come into this world happy, healthy, understood, and with great faith.
+          I am a friend and ally, and appreciate your existence greatly.
+        --> 
 
         <!-- Articles -->
         <h4>Media Mentions</h4>
