--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
         <h4>Experience</h4>
         <p class="accent-bar">
           Senior Software Engineer at <span class="crwd">CrowdStrike</span>, building cloud infrastructure in DICE (Data, Identity, Cloud, Endpoint) and Identity Protection teams.
-          <br />
+        </p>
+        <p class="accent-bar">
           Previously at <span class="vmware">VMware</span>, where he worked on Kubernetes platforms (Tanzu CLI, networking) and Cloud Foundry systems.
-          <br />
+        </p>
+        <p class="accent-bar">
           Earlier experience includes platform engineering at <span class="anduril">Anduril</span>, and research roles at <span class="bell">Bell Labs</span> and UC Berkeley.
         </p>
 
